--- a/chat/client/index.html
+++ b/chat/client/index.html
@@ -23,6 +23,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+  <script src="../../jslib/chatvars.js"></script>
   <script>
     //dynamic data
     var username = 'pablo';
